--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -210,7 +210,7 @@ header.masthead h2 {
   -moz-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background-color: #475a6d;
+  background-color: #68d8ff3b;
 }
 
 .portfolio .portfolio-item .portfolio-item-caption:hover {
