--- a/templates/index.html
+++ b/templates/index.html
@@ -233,7 +233,7 @@
               <h2 class="text-primary text-uppercase mb-0">Splinching</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="../static/img/g2b.gif" alt="Splinching">
-              <p class="text-secondary mb-5">Splinching, or having objects or body parts left behind, is extremely rare. Nevertheless, we compensate for the lost item or teleport it in an additional trip for no charge.</p>
+              <p class="text-secondary mb-5">Splinching, or having objects or body parts left behind, is extremely rare. Nevertheless, we compensate for the lost item or teleport it in an additional trip for no charge. We also offer complementary prosthetics, courtesy of Bionics Inc..</p>
             </div>
           </div>
         </div>
@@ -252,7 +252,7 @@
               <h2 class="text-primary text-uppercase mb-0">Dislocation</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="../static/img/g1b.gif" alt="Dislocation">
-              <p class="text-secondary mb-5">Dislocation def</p>
+              <p class="text-secondary mb-5">Dislocation occurs when an object does not maintain its proper position throughout the teleportation process, and instead migrates away from its original position or disconnects from its host entirely. To have this fixed free of charge, simply visit the nearest Portal custumer service station and wait for relocation.</p>
             </div>
           </div>
         </div>
@@ -268,10 +268,10 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-primary text-uppercase mb-0">Luggage Inspection</h2>
+              <h2 class="text-primary text-uppercase mb-0">Wrong Destination</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="../static/img/g3b.gif" alt="Wrong Destination">
-              <p class="text-secondary mb-5">Wrong destination comp</p>
+              <p class="text-secondary mb-5">We are not responsible for incorrect entries, but if a proven glitch occurs, we can teleport you to your true destination free of charge.<br>If the Portal station you were traveling to experiences an error while you were in transit, you will be relocated to the nearest station, and alternate transportation will be provided.</p>
             </div>
           </div>
         </div>
